# dht22-prometheus

./: Cargo.toml  dht22.service
src/: main.rs
